fixed some align issues

--- a/src/output.css
+++ b/src/output.css
@@ -646,10 +646,6 @@ video {
   top: -65px;
 }
 
-.top-\[0\%\] {
-  top: 0%;
-}
-
 .top-\[18\%\] {
   top: 18%;
 }
@@ -688,6 +684,18 @@ video {
 
 .top-full {
   top: 100%;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[50\] {
+  left: 50;
+}
+
+.left-\[50\%\] {
+  left: 50%;
 }
 
 .z-30 {
@@ -834,6 +842,42 @@ video {
   margin-top: 8px;
 }
 
+.-ml-10 {
+  margin-left: -2.5rem;
+}
+
+.-ml-24 {
+  margin-left: -6rem;
+}
+
+.-ml-44 {
+  margin-left: -11rem;
+}
+
+.-ml-\[50\%\] {
+  margin-left: -50%;
+}
+
+.-ml-\[30\%\] {
+  margin-left: -30%;
+}
+
+.-ml-\[25\%\] {
+  margin-left: -25%;
+}
+
+.-ml-\[28\%\] {
+  margin-left: -28%;
+}
+
+.-ml-\[32\%\] {
+  margin-left: -32%;
+}
+
+.-ml-\[22\%\] {
+  margin-left: -22%;
+}
+
 .block {
   display: block;
 }
@@ -963,6 +1007,10 @@ video {
   width: 100%;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
 .min-w-\[250\%\] {
   min-width: 250%;
 }
@@ -985,6 +1033,21 @@ video {
 
 .origin-left {
   transform-origin: left;
+}
+
+.translate-x-\[\] {
+  --tw-translate-x: ;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[50\%\] {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-\[50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -1140,6 +1203,11 @@ video {
 .bg-neutral-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1434,6 +1502,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[22vw\] {
+  font-size: 22vw;
 }
 
 .font-\[500\] {
@@ -3027,6 +3099,10 @@ nav .lightRay {
 
   .\32xl\:mt-\[80px\] {
     margin-top: 80px;
+  }
+
+  .\32xl\:-ml-\[22\%\] {
+    margin-left: -22%;
   }
 
   .\32xl\:w-\[300\%\] {
